--- a/force-app/main/default/aura/Action_ParticipantInformation/Action_ParticipantInformation.cmp
+++ b/force-app/main/default/aura/Action_ParticipantInformation/Action_ParticipantInformation.cmp
@@ -7,7 +7,7 @@
                   scripts="{!join(',', $Resource.rr_community_js)}" afterScriptsLoaded="{!c.doInit}"/>
 
     <!-- attributes: -->
-    <aura:attribute name="pe" type="Object"/>
+    <aura:attribute name="pe" type="Participant_Enrollment__c"/>
     <aura:attribute name="participant" type="Participant__c" access="private"/>
     <aura:attribute name="callback" type="Object" access="private"/>
     <aura:attribute name="rootComponent" type="Aura.Component" access="public"/>
@@ -49,7 +49,8 @@
                                             formData="{!v.formData}"
                                             updateMode="true"
                                             isFinalUpdate="{!v.isFinalUpdate}"
-                                            isValid="{!v.isValid}"/>
+                                            isValid="{!v.isValid}"
+                                            visitPlanRequired="{!v.pe.Study_Site__r.Clinical_Trial_Profile__r.Patient_Portal_Enabled__c}"/>
                     <div class="slds-clearfix">
                         <div class="slds-float_right">
                             <button class="apollo-btn tertiary" disabled="{!!v.isValid}"
