--- a/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
+++ b/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
@@ -32,7 +32,12 @@
         <div class="rr-width-limiter side-padding">
             <div class="ap-top-info">{! '* ' +  $Label.c.PG_AP_T_Indicate_Req_Fields}</div>
             <div class="rr-white-panel padding">
-                <c:Form_EditPatientInfo aura:id="editForm" participant="{!v.participant}" pe="{!v.pe}" formData="{!v.formData}" isValid="{!v.isValid}"/>
+                <c:Form_EditPatientInfo aura:id="editForm"
+                                        participant="{!v.participant}"
+                                        pe="{!v.pe}"
+                                        formData="{!v.formData}"
+                                        isValid="{!v.isValid}"
+                                        visitPlanRequired="{!v.ctp.Patient_Portal_Enabled__c}"/>
             </div>
             <div class="ap-bottom-info">
                 {!$Label.c.PG_AP_T_Sub_Info}
