--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -491,7 +491,7 @@
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-5" style="{!IF(!notEnrollNow,'','display:none;')}">
                                     <label>{!$Label.PG_AS_F_Middle_name}</label>
-                                    <input class="slds-input" type="text" value="{!contact.MiddleName}"></input>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MiddleName}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 {!IF(notEnrollNow,'slds-medium-size_1-of-3','slds-medium-size_1-of-5')}">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Last_name}</label>
@@ -500,7 +500,7 @@
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-5" style="{!IF(!notEnrollNow,'','display:none;')}">
                                     <label>{!$Label.PG_AS_F_Suffix}</label>
-                                    <input class="slds-input" type="text" value="{!contact.Suffix}"></input>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.Suffix}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3" style="{!IF(notEnrollNow,'','display:none;')}">
 
@@ -547,7 +547,7 @@
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label>{!$Label.PG_AS_F_Institute_Fax_Number}</label>
                                     <input class="slds-input" type="text" value="{!account.Fax}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <input class="slds-input" type="text" value="{!account.Fax}" style="{!IF(!notEnrollNow,'','display:none;')}"></input>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.Fax}" rendered="{!!notEnrollNow}"/>
                                 </div>
                             </div>
                         </apex:outputPanel>
