--- a/force-app/main/default/aura/VisitResultSharingPanel/VisitResultSharingPanel.css
+++ b/force-app/main/default/aura/VisitResultSharingPanel/VisitResultSharingPanel.css
@@ -81,3 +81,14 @@
 .THIS .completed-visits-input .info-text{
     padding-left: 10px;
 }
+
+.THIS .overlay{
+    position: fixed; /* Sit on top of the page content */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: unset;
+}
