--- a/force-app/main/default/layouts/Trial_Notification__c-Trial Notification Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Trial_Notification__c-Trial Notification Layout.layout-meta.xml
@@ -22,6 +22,10 @@
                 <behavior>Edit</behavior>
                 <field>Need_To_Send_Alert__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CTP_Name__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
