--- a/force-app/main/default/aura/AccountSettings/AccountSettings.css
+++ b/force-app/main/default/aura/AccountSettings/AccountSettings.css
@@ -14,11 +14,10 @@
     margin-bottom: 30px;
 }
 
-.THIS.as-container .as-email-preference
-{
+.THIS.as-container .as-email-preference {
     margin-top: 30px;
-    position: relative;
 }
+
 
 .THIS.as-container .as-info,
 .THIS.as-container .as-language-switcher
@@ -37,23 +36,24 @@
 
 .THIS.as-container .as-title {
     color: #000000;
-    font-size: 30px;
-    line-height: 36px;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 600;
 }
 
 .THIS.as-container .as-sub-title {
     color: #333333;
     font-size: 13px;
-    line-height: 16px;
+    line-height: 16px;    
 }
 
 .THIS.as-container .as-password .as-password-button {
     margin-top: 20px;
 }
 
-.THIS .as-email-input,
+.THIS .as-email-input.slds-gutters,
 .THIS .as-password-input{
-    margin-top: -20px;
+    margin: -20px 0 0;
 }
 
 .THIS .as-email-input > *,
