--- a/force-app/main/default/aura/CustomThemeLayout/CustomThemeLayout.css
+++ b/force-app/main/default/aura/CustomThemeLayout/CustomThemeLayout.css
@@ -44,7 +44,7 @@
 
 .THIS .title-logo{
     /*height: 39px;*/
-    width: 123px;
+    width: 165px;
     margin-right: 10px;
     cursor: pointer;
 }
@@ -58,7 +58,54 @@
     margin-top: 6px;
 }
 
-.THIS .sub-titile{
+.THIS .slds-select {
+    background-color: #fff;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+}
+
+.THIS .slds-select:focus,
+.THIS .slds-input:focus,
+.THIS .slds-pill:focus,
+.THIS .slds-textarea:focus {
+    box-shadow: none;
+    outline: none;
+}
+
+.THIS .slds-select:hover,
+.THIS .slds-input:hover,
+.THIS .slds-pill:hover,
+.THIS .slds-textarea:hover {
+    border: 1px solid #297dfd;
+}
+
+.THIS .slds-input {
+    box-sizing: border-box;	
+    height: 40px;		
+    border: 1px solid #d9d9d9;	
+    border-radius: 4px;	
+    background-color: #fff;	
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0);
+}
+
+.THIS .slds-input::placeholder {
+    font-size: 1rem;
+    color: #999;
+    font-weight: 400;
+}
+
+.THIS input::placeholder {
+    color: #999;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.THIS .slds-pill {
+    height: 32px;
+    font-size: 1rem;
+}
+
+.THIS .sub-title{
     font-size: .65rem;
     color: white;
     opacity: .5;
