--- a/force-app/main/default/aura/ModeSelector/ModeSelector.css
+++ b/force-app/main/default/aura/ModeSelector/ModeSelector.css
@@ -18,7 +18,7 @@
     /*box-shadow: 0 8px 30px 0 rgba(0,0,0,0.25);*/
     user-select: none;
     z-index: 2100;
-    width: 184px;
+    width: 245px;
 }
 
 .THIS.mode-block span{
@@ -40,14 +40,13 @@
     visibility: visible;
     position: absolute;
     top: 50px;
-    color: black;
+    color: #444;
     left: 0;
-    width: 250px;
-    border: 1px solid #B5B5B5;
+    width: 255px;
+    border: 1px solid #d9d9d9;
     border-radius: 0 0 4px 4px;
     background-color: #FFFFFF;
-    box-shadow: 0 8px 50px 0 rgba(0,0,0,0.3);
-    padding: 7px 5px;
+    box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.16);
     transition: 0.5s;
     z-index: 10010;
 }
@@ -63,28 +62,29 @@
 
 .THIS .mode-menu li {
     color: #000000;
-    font-size: 14px;
-    line-height: 24px;
-    padding: 3px 10px;
+    font-size: 1rem;
+    padding: 0 10px;
     cursor: pointer;
+    height: 40px;
+    display: inline-flex;
+    width: 100%;
+    align-items: center;
 }
 
 .THIS .mode-label{
-    max-width: 140px;
+    max-width: 220px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
     display: inline-block;
     vertical-align: middle;
-    font-size: 12px;
+    font-size: .875rem;
 }
 
-.THIS .mode-menu li.active {
-    color: white;
-    border-radius: 4px;
-    background-color: #297DFD;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1), 0 4px 8px 0 rgba(41,125,253,0.3);
-    padding: 3px 10px;
+.THIS .mode-menu li.active,
+.THIS .mode-menu li.hover {
+   	background: #eef5ff;
+    color: #000;
 }
 
 
