--- a/force-app/main/default/aura/Resource/Resource.css
+++ b/force-app/main/default/aura/Resource/Resource.css
@@ -7,8 +7,9 @@
 .THIS.resource-card {
 	display: flex;
 	flex-direction: column;
-	min-width: 565px;
+	max-width: 525px;
 	min-height: 645px;
+    position: relative;
 }
 
 .THIS .last-resource-container {
