--- a/force-app/main/default/aura/TravelVendorPanel/TravelVendorPanel.cmp
+++ b/force-app/main/default/aura/TravelVendorPanel/TravelVendorPanel.cmp
@@ -101,7 +101,7 @@
                                 <th class="cell-wrap" scope="col">
                                     <div class="slds-medium-show--inline-block">
                                         <ui:inputCheckbox aura:id="columnVendor"
-                                                          class="slds-medium-show--inline-block slds-float--left slds-m-right--x-small slds-dl_horizontal__label"
+                                                          class="uiInput--checkbox slds-medium-show--inline-block slds-float--left slds-m-right--x-small slds-dl_horizontal__label"
                                                           label="{!vendor.Id}" labelClass="slds-hide"
                                                           change="{!c.columnCheckboxStateChange}"
                                                           disabled="{!v.permission == 'read'}"/>
@@ -131,7 +131,8 @@
                                     <td>
                                         <ui:inputCheckbox value="{!selectedVendorIdSetting.isEnable__c}"
                                                           label="{!selectedVendorIdSetting.Vendor__r.Name}"
-                                                          disabled="{!v.permission == 'read'}"/>
+                                                          disabled="{!v.permission == 'read'}"
+                                                          class="uiInput--checkbox"/>
                                     </td>
                                 </aura:iteration>
                             </tr>
