--- a/force-app/main/default/aura/Action_EditIconLegend/Action_EditIconLegend.cmp
+++ b/force-app/main/default/aura/Action_EditIconLegend/Action_EditIconLegend.cmp
@@ -7,6 +7,7 @@
     <aura:attribute name="planId" type="String"/>
     <aura:attribute name="iconDetails" type="List"/>
     <aura:attribute name="callback" type="Object"/>
+    <aura:attribute name="isDisabled" type="Boolean"/>
 
     <aura:method name="execute" action="{!c.doExecute}">
         <aura:attribute name="planId" type="String"/>
@@ -15,7 +16,9 @@
         <aura:attribute name="callback" type="Function"/>
     </aura:method>
 
-    <c:uiModal aura:id="modal" size="medium" headerText="{!$Label.c.Edit_Visit_Legend}">
+    <c:uiModal aura:id="modal" size="medium" headerText="{!if(v.isDisabled,
+                                                           $Label.c.View_Visit_Legend,
+                                                           $Label.c.Edit_Visit_Legend)}">
         <c:RRTable>
             <tr>
                 <th class="slds-text-align--center">Icon</th>
@@ -28,10 +31,10 @@
                         <c:RRIcon resource="{!$Resource.Icons_legend}" iconName="{!icon.Name}"/>
                     </td>
                     <td style="width: 30%">
-                        <lightning:input label="" name="{!icon.label__c}" value="{!icon.Label__c}"/>
+                        <lightning:input label="" name="{!icon.label__c}" value="{!icon.Label__c}" disabled="{!v.isDisabled}"/>
                     </td>
                     <td>
-                        <lightning:input label="" name="{!icon.description__c}" value="{!icon.Description__c}"/>
+                        <lightning:input label="" name="{!icon.description__c}" value="{!icon.Description__c}" disabled="{!v.isDisabled}"/>
                     </td>
                 </tr>
             </aura:iteration>
@@ -39,8 +42,10 @@
         <aura:set attribute="footer">
             <lightning:button variant="neutral" type="button" name="editLegend" label="{!$Label.c.BTN_Cancel}"
                               onclick="{!c.cancelClick}"/>
-            <lightning:button variant="brand" type="button" name="save" label="{!$Label.c.Visit_b_Save}"
-                              onclick="{!c.saveClick}"/>
+            <aura:if isTrue="{!!v.isDisabled}">
+                <lightning:button variant="brand" type="button" name="save" label="{!$Label.c.Visit_b_Save}"
+                                  onclick="{!c.saveClick}"/>
+            </aura:if>
         </aura:set>
     </c:uiModal>
 
