--- a/force-app/main/default/aura/Action_EditVisitPlan/Action_EditVisitPlan.cmp
+++ b/force-app/main/default/aura/Action_EditVisitPlan/Action_EditVisitPlan.cmp
@@ -23,16 +23,23 @@
     </aura:method>
 
     <!--Create/Edit Visit Plan-->
-    <c:uiModal aura:id="createVisitPlan" size="medium" headerText="{!if(v.mode == 'edit','Edit Visit Plan', if(v.mode == 'clone', 'Clone Visit Paln', 'Create Visit Plan'))}">
+    <c:uiModal aura:id="createVisitPlan" size="medium" headerText="{!if(v.mode == 'edit','Edit Visit Plan',
+                                                                     if(v.mode == 'clone', 'Clone Visit Plan',
+                                                                     if(v.mode == 'view', 'View Visit Plan', 'Create Visit Plan')))}">
         <div class="edit-vp-container">
             <c:RRSpinner aura:id="spinner"/>
             <div class="toolbar">
-                <lightning:input class="inline-input" type="text" label="Visit Plan Name" value="{!v.plan.Name}"/>
+                <lightning:input class="inline-input" type="text" label="Visit Plan Name" value="{!v.plan.Name}"
+                                 disabled="{!equals(v.mode,'view')}"/>
                 <div class="btns">
-                    <lightning:button class="toolbar-btn" variant="neutral" type="button" label="{!$Label.c.Edit_Visit_Legend}"
+                    <lightning:button class="toolbar-btn" variant="neutral" type="button" label="{!if(v.mode == 'view',
+                                                                                                    $Label.c.View_Visit_Legend,
+                                                                                                    $Label.c.Edit_Visit_Legend)}"
                                       onclick="{!c.doEditLegend}"/>
+                    <aura:if isTrue="{!!equals(v.mode,'view')}">
                     <lightning:button class="toolbar-btn" variant="neutral" type="button" label="{!$Label.c.Visit_b_Add_Visit}"
                                       onclick="{!c.doAddVisit}"/>
+                    </aura:if>
                 </div>
             </div>
             <!--Visits table-->
@@ -56,19 +63,22 @@
                             <th scope="col">
                                 <div class="slds-truncate">{!$Label.c.Visit_Icons}</div>
                             </th>
-                            <th></th>
-                            <th></th>
+                            <aura:if isTrue="{!!equals(v.mode,'view')}">
+                                <th></th>
+                                <th></th>
+                            </aura:if>
                         </tr>
                         </thead>
                         <tbody>
-                        <aura:iteration var="visit" items="{!v.visits}">
-                            <aura:if isTrue="{!not(visit.deleted)}">
-                                <c:VisitItem visit="{!visit}"
-                                             selectedRowColor="rgb(243, 242, 242)"
-                                             onEdit="{!c.doVisitItemEdit}"
-                                             onDelete="{!c.doVisitItemDelete}"/>
-                            </aura:if>
-                        </aura:iteration>
+                            <aura:iteration var="visit" items="{!v.visits}">
+                                <aura:if isTrue="{!not(visit.deleted)}">
+                                    <c:VisitItem visit="{!visit}"
+                                                 selectedRowColor="rgb(243, 242, 242)"
+                                                 onEdit="{!c.doVisitItemEdit}"
+                                                 onDelete="{!c.doVisitItemDelete}"
+                                                 isDisable="{!equals(v.mode,'view')}"/>
+                                </aura:if>
+                            </aura:iteration>
                         </tbody>
                     </table>
                 </div>
@@ -78,13 +88,15 @@
             <lightning:button variant="neutral" type="button" name="createVisitPlan"
                               label="{!$Label.c.BTN_Cancel}"
                               onclick="{!c.cancelClick}"/>
-            <lightning:button variant="brand" type="button" name="save" label="{!$Label.c.Visit_b_Save}"
-                              disabled="{!empty(v.plan.Name)}" onclick="{!c.saveVP}"/>
+            <aura:if isTrue="{!!equals(v.mode,'view')}">
+                <lightning:button variant="brand" type="button" name="save" label="{!$Label.c.Visit_b_Save}"
+                                  disabled="{!empty(v.plan.Name)}" onclick="{!c.saveVP}"/>
+            </aura:if>
         </aura:set>
     </c:uiModal>
 
     <!--Actions: -->
-    <c:Action_EditIconLegend aura:id="actionLegend" planId="{!v.plan.Id}"/>
+    <c:Action_EditIconLegend aura:id="actionLegend" planId="{!v.plan.Id}" isDisabled="{!equals(v.mode,'view')}"/>
     <c:Action_EditVisit aura:id="actionVisit" icons="{!v.icons}"/>
 
     <c:IconsStaticResourceService aura:id="iconsService"
