--- a/force-app/main/default/aura/VisitPlanColumnMenu/VisitPlanColumnMenu.cmp
+++ b/force-app/main/default/aura/VisitPlanColumnMenu/VisitPlanColumnMenu.cmp
@@ -5,6 +5,7 @@
 <aura:component description="VisitPlanColumnMenu" controller="VisitPlanRemote">
 
     <aura:attribute name="plan" type="Object"/>
+    <aura:attribute name="isVisible" type="Boolean"/>
 
     <aura:registerEvent name="onEdit" type="c:uiEvent"/>
     <aura:registerEvent name="onClone" type="c:uiEvent"/>
@@ -15,15 +16,22 @@
             <div>{!v.plan.label}</div>
         </ui:menuTriggerLink>
         <ui:menuList aura:id="actionMenu" class="menu-popup">
-            <c:uiMenuItem label="Edit" onclick="{!c.doEditSelected}">
-                <lightning:icon iconName="utility:edit" size="x-small"/>Edit
-            </c:uiMenuItem>
-            <c:uiMenuItem label="Clone" onclick="{!c.doCloneSelected}">
-                <lightning:icon iconName="utility:copy" size="x-small"/>Clone
-            </c:uiMenuItem>
-            <c:uiMenuItem label="Delete" onclick="{!c.doDeleteSelected}">
-                <lightning:icon iconName="utility:close" size="x-small"/>Remove
-            </c:uiMenuItem>
+            <aura:if isTrue="{!v.isVisible}">
+                <c:uiMenuItem label="Edit" onclick="{!c.doEditSelected}">
+                    <lightning:icon iconName="utility:edit" size="x-small"/>Edit
+                </c:uiMenuItem>
+                <c:uiMenuItem label="Clone" onclick="{!c.doCloneSelected}">
+                    <lightning:icon iconName="utility:copy" size="x-small"/>Clone
+                </c:uiMenuItem>
+                <c:uiMenuItem label="Delete" onclick="{!c.doDeleteSelected}">
+                    <lightning:icon iconName="utility:close" size="x-small"/>Remove
+                </c:uiMenuItem>
+                <aura:set attribute="else">
+                    <c:uiMenuItem label="View" onclick="{!c.doEditSelected}">
+                        <lightning:icon iconName="utility:preview" size="x-small"/>View
+                    </c:uiMenuItem>
+                </aura:set>
+            </aura:if>
         </ui:menuList>
     </ui:menu>
 
