--- a/force-app/main/default/aura/RRSearchAbstract/RRSearchAbstract.cmp
+++ b/force-app/main/default/aura/RRSearchAbstract/RRSearchAbstract.cmp
@@ -12,10 +12,11 @@
     <aura:attribute name="placeholderSelected" type="String" default="Select another one" access="global"/>
     <aura:attribute name="placeholderLoading" type="String" default="Loading..." access="global"/>
     <aura:attribute name="isMultiEntry" access="global" type="Boolean" default="false"/>
-    <aura:attribute name="scrollAfterNItems" access="global" type="Integer" default="5"/>
+    <aura:attribute name="scrollAfterNItems" access="global" type="Integer" default="6"/>
     <aura:attribute name="errors" type="List" default="[]" access="global"/>
     <aura:attribute name="extendedPill" type="Boolean" default="true"/>
     <aura:attribute name="minTermLength" type="Integer" default="2"/>
+    <aura:attribute name="searchItemsLimit" type="Integer" default="5"/>
 
     <aura:attribute name="onchange" type="Aura.Action"/>
     <aura:attribute name="onblur" type="Aura.Action"/>
@@ -103,20 +104,25 @@
                             role="presentation">
 
                             <aura:iteration items="{!v.searchResults}" var="result" indexVar="ind">
-                                <li role="presentation" class="slds-listbox__item">
-                                    <span data-item-index="{!ind}" class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta"
-                                          role="option" onclick="{!c.onResultClick}">
-                                        <span class="slds-media__figure">
-                                            <lightning:icon iconName="{! empty(result.icon) ? 'standard:default' : result.icon}"
-                                                            size="small" alternativeText="Result item icon" />
+                                <aura:if isTrue="{!ind &lt; v.searchItemsLimit }">
+                                    <li role="presentation" class="slds-listbox__item">
+                                        <span data-item-index="{!ind}" class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta"
+                                              role="option" onclick="{!c.onResultClick}">
+                                            <span class="slds-media__figure">
+                                                <lightning:icon iconName="{! empty(result.icon) ? 'standard:default' : result.icon}"
+                                                                size="small" alternativeText="Result item icon" />
+                                            </span>
+                                            <span class="slds-media__body">
+                                                <span class="slds-listbox__option-text slds-listbox__option-text_entity">{!result.title}</span>
+                                                <span class="slds-listbox__option-meta slds-listbox__option-meta_entity">{!result.subtitle}</span>
+                                            </span>
                                         </span>
-                                        <span class="slds-media__body">
-                                            <span class="slds-listbox__option-text slds-listbox__option-text_entity">{!result.title}</span>
-                                            <span class="slds-listbox__option-meta slds-listbox__option-meta_entity">{!result.subtitle}</span>
-                                        </span>
-                                    </span>
-                                </li>
+                                    </li>
+                                </aura:if>
                             </aura:iteration>
+                            <aura:if isTrue="{!v.searchResults.length > v.searchItemsLimit}">
+                                <div class="dots-item">...</div>
+                            </aura:if>
 
                         </ul>
                     </div>
