--- a/force-app/main/default/aura/VisitResultSharingPanel/VisitResultSharingPanel.cmp
+++ b/force-app/main/default/aura/VisitResultSharingPanel/VisitResultSharingPanel.cmp
@@ -19,8 +19,8 @@
 
     <!-- component body: -->
     <c:RRSpinner aura:id="spinner" showSpinner="true"/>
-    <aura:if isTrue="{!v.user_has_permission != 'no perm'}">
-        <div style="position: relative;">
+    <div class="panel">
+        <aura:if isTrue="{!v.user_has_permission != 'no perm'}">
             <aura:if isTrue="{!!empty(v.initData)}">
                 <aura:if isTrue="{!or(empty(v.groups), v.options.inPatientPortal)}">
                     <div class="vrs-panel">
@@ -33,10 +33,10 @@
                                                      checked="{!v.options.globalShareBck}"
                                                      onchange="{!c.onChangeGlobal}"/>
                                 </div>
-                                    <div>
-                                        <lightning:button aura:id="saveBtn" variant="brand" label="Save"
-                                                          onclick="{!c.saveOptions}"/>
-                                    </div>
+                                <div>
+                                    <lightning:button aura:id="saveBtn" variant="brand" label="Save"
+                                                      onclick="{!c.saveOptions}"/>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -139,6 +139,6 @@
             <aura:if isTrue="{!v.user_has_permission == 'read'}">
                 <div class="overlay"></div>
             </aura:if>
-        </div>
-    </aura:if>
+        </aura:if>
+    </div>
 </aura:component>
