--- a/force-app/main/default/aura/TrialItem/TrialItem.cmp
+++ b/force-app/main/default/aura/TrialItem/TrialItem.cmp
@@ -75,5 +75,5 @@
         </aura:if>
 
     </div>
-    <c:RRSpinner aura:id="mainSpinner" showSpinner="false" size="medium"/>
+    <c:RRSpinner aura:id="mainSpinner" showSpinner="false" size="medium" fixed="true"/>
 </aura:component>
