--- a/force-app/main/default/layouts/Res_study__c-Res-study Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Res_study__c-Res-study Layout.layout-meta.xml
@@ -37,6 +37,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>Expires_On_Status__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>Active_After_Days__c</field>
             </layoutItems>
             <layoutItems>
@@ -121,7 +125,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1j000000awZt</masterLabel>
+        <masterLabel>00h1X000000cTIv</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
