REF-561 fixing issue
REF-561 fixing issue

--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -597,7 +597,8 @@
                             </div>
                         </apex:outputPanel>
                         <div class="cp-save-btn-container">
-                            <apex:commandButton action="{!checkPasswords}" value="{!$Label.PG_Login_BTN_Save_And_Continue}" styleClass="apollo-btn primary cp-save-btn"/>
+                            <apex:actionFunction action="{!checkPasswords}" name="checkPassword"/>
+                            <apex:commandButton onclick="return checkPassword();" action="{!saveUserInfo}" value="{!$Label.PG_Login_BTN_Save_And_Continue}" styleClass="apollo-btn primary cp-save-btn"/>
                         </div>
                         <div class="cp-info-titile" style="color: #000; text-align: center">{!$Label.PG_Login_T_This_Site_Optimized_For}</div>
                         <div style="height: 80px"></div>
