--- a/force-app/main/default/aura/CustomThemeLayout/CustomThemeLayout.css
+++ b/force-app/main/default/aura/CustomThemeLayout/CustomThemeLayout.css
@@ -88,6 +88,10 @@
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0);
 }
 
+.THIS .slds-select {
+    font-size: 1rem;
+}
+
 .THIS .slds-input::placeholder {
     font-size: 1rem;
     color: #999;
