--- a/force-app/main/default/aura/ModeSelector/ModeSelector.css
+++ b/force-app/main/default/aura/ModeSelector/ModeSelector.css
@@ -6,6 +6,10 @@
     font-family: "Proxima Nova";
 }
 
+.THIS > div {
+	text-align: right;    
+}
+
 .THIS.mode-block {
     display: inline-block;
     position: relative;
@@ -18,7 +22,6 @@
     /*box-shadow: 0 8px 30px 0 rgba(0,0,0,0.25);*/
     user-select: none;
     z-index: 2100;
-    width: 245px;
 }
 
 .THIS.mode-block span{
