--- a/force-app/main/default/aura/RRCollapse/RRCollapse.css
+++ b/force-app/main/default/aura/RRCollapse/RRCollapse.css
@@ -44,7 +44,7 @@
 
 .THIS.rr-collapse-panel .body{
     overflow: hidden;
-    transition: 0.6s ease-in-out;
+  /*  transition: 0.6s ease-in-out; */
     max-height: 3000px;
 }
 
