--- a/force-app/main/default/aura/RRLink/RRLink.css
+++ b/force-app/main/default/aura/RRLink/RRLink.css
@@ -3,11 +3,11 @@
  */
 .THIS.rr-link{
     color: #297DFD;
-    padding: 0 8px;
-    height: 32px;
+    padding: 4px 8px;
     display: inline-flex;
     align-items: center;
     border-radius: 4px;
+    margin: -4px 0 0 -8px;
 }
 /*
 .THIS.rr-link.only-text{
@@ -26,10 +26,11 @@
     vertical-align: bottom;
     white-space: nowrap;
     display: inline-block;
+    padding-top: 4px;
 }
 
 .THIS.rr-link svg{
     fill: #297DFD;
-    width: 14px;
-    height: 14px;
+    width: 12px;
+    height: 12px;
 }
