--- a/force-app/main/default/aura/PastStudyCard/PastStudyCard.css
+++ b/force-app/main/default/aura/PastStudyCard/PastStudyCard.css
@@ -17,3 +17,14 @@
 .THIS .resource-item{
     padding: 5px;
 }
+
+.THIS .no-resources-message {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    color: gray;
+    padding: 20px;
+}
