--- a/force-app/main/default/aura/Action_InviteRP/Action_InviteRP.cmp
+++ b/force-app/main/default/aura/Action_InviteRP/Action_InviteRP.cmp
@@ -60,10 +60,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="rr-form-element slds-col slds-size--1-of-1 slds-p-around_medium">
+                <!--<div class="rr-form-element slds-col slds-size&#45;&#45;1-of-1 slds-p-around_medium">
                     <div class="label"><abbr title="required" class="slds-required">*</abbr>{!$Label.c.PG_MRC_RF_Clinic_Name}</div>
                     <c:rrInput valueString="{!v.clinicName}"/>
-                </div>
+                </div>-->
                 <div class="rr-form-element slds-col slds-size--1-of-1 slds-p-around_medium" style="max-width: 100%;">
                     <aura:if isTrue="{!!empty(v.studySitesForInvitation)}">
                         <div class="label">{!$Label.c.PG_MRC_RF_Invite_to_Studies}</div>
