Invite RP UI & Change Password UI

--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -224,6 +224,10 @@
             width: 33%;
         }
 
+        textarea{
+            line-height: unset !important;
+        }
+
         @media all and (max-width: 767px){
             .cp-save-btn{
                 width: 100%;
