change PSE History layout

--- a/unpackaged/main/default/layouts/Participant_Enrollment_Status_History__c-Participant Enrollment Status History Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant_Enrollment_Status_History__c-Participant Enrollment Status History Layout.layout-meta.xml
@@ -71,7 +71,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0E000001MWS0</masterLabel>
+        <masterLabel>00h1X000000Kz43</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
