--- a/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.cmp
+++ b/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.cmp
@@ -8,7 +8,6 @@
     <aura:attribute name="taps" type="List"/>
     <aura:attribute name="participant" type="Participant__c" access="public"/>
     <aura:attribute name="formData" type="Object" access="public"/>
-    <aura:attribute name="isInit" type="Boolean"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     <aura:handler name="updateSearchEvent" event="c:UpdateConditionsOfInterestSearchEvt" action="{!c.handleUpdateSearchEvent}"/>
@@ -27,7 +26,7 @@
                 </div>
             </div>
             <div class="trials-container">
-                <c:TrialsContainer trialTDOs="{!v.trialTDOs}" participant="{!v.participant}" formData="{!v.formData}" isInit="{!v.isInit}"/>
+                <c:TrialsContainer trialTDOs="{!v.trialTDOs}" participant="{!v.participant}" formData="{!v.formData}"/>
             </div>
 
         </lightning:layoutItem>
