--- a/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
+++ b/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
@@ -22,7 +22,7 @@
             <div class="visit-result-name">
                 {!v.wrapper.name}
                 <br />
-                <div class="visit-result-measurement">{!v.wrapper.measurement}</div>
+                <div class="visit-result-measurement"><aura:unescapedHtml value="{!v.wrapper.measurement}"/></div>
             </div>
         </div>
         <div class="visit-result-slider">
